fix broken styles when showing more favorite pages

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-favorite-panel/dot-pages-favorite-panel.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-pages/dot-pages-favorite-panel/dot-pages-favorite-panel.component.scss
@@ -52,8 +52,7 @@
     }
 
     .dot-pages-panel__expanded .p-toggleable-content .p-panel-content {
-        overflow: unset;
-        height: unset;
+        overflow: scroll;
     }
 
     .dot-pages-panel__empty-state .p-toggleable-content .p-panel-content {
